--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -16,6 +16,10 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="team_feature">
+    <%= form.collection_check_boxes(:feature_ids, Feature.all, :id, :label) %>
+  </div>
+
   <%= form.submit %>
 
 <% end %>
