--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -20,6 +20,6 @@
     <%= form.collection_check_boxes(:feature_ids, Feature.all, :id, :label) %>
   </div>
 
-  <%= form.submit %>
+  <%= form.submit '登録' %>
 
 <% end %>
