--- a/app/views/invites/edit.html.erb
+++ b/app/views/invites/edit.html.erb
@@ -1,2 +1,4 @@
 <h2>募集編集</h2>
 <%= render 'form' %>
+<%= link_to "戻る", invite_path(@invite.id) %>
+<%= link_to '削除', invite_path(@invite.id), method: :delete, data: { confirm: '本当に編集していいですか？' } %>
