--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -1,4 +1,9 @@
-
+<h2>募集一覧</h2>
+<%= search_form_for @q do |f| %>
+  <%= f.label :label, "特徴検索" %>
+  <%= f.select :team_features_label_cont, options_from_collection_for_select(Feature.all, :label, :label , 1) %>
+  <%= f.submit "検索" %>
+<% end %>
 
 <% @invites.each do |invite| %>
   <% if invite.status == true %>
