--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -12,11 +12,12 @@
   <% end %>
 
   <div class="team_name">
-    <%= form.label :name %>
+    <%= form.label 'チーム名：' %>
     <%= form.text_field :name %>
   </div>
 
   <div class="team_feature">
+    <%= form.label '特徴：' %>
     <%= form.collection_check_boxes(:feature_ids, Feature.all, :id, :label) %>
   </div>
 
