--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="team_feature">
     <%= form.label '特徴：' %>
-    <%= form.collection_check_boxes(:feature_ids, Feature.all, :id, :label) %>
+    <%= form.collection_check_boxes(:feature_ids, @features, :id, :label) %>
   </div>
 
   <%= form.submit '登録' %>
