--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,12 @@
 <section class="section">
   <div class="container">
-    <div class="columns is-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-4">
-
+        <% if @conversation.recipient_id == current_user.id %>
+          <%= User.find(@conversation.sender_id).name %>
+        <% else %>
+          <%= User.find(@conversation.recipient_id).name %>
+        <% end %><br>
         <% if @over_ten %>
         <%= link_to '以前のメッセージ', '?m=all' %>
         <% end %>
